templates/developer-portal_template.yaml
---
# Source: developer-portal/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: developer-portal-release-name
  labels:
    app: developer-portal
    chart: developer-portal-0.0.9
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: developer-portal
      release: release-name
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
      - port: 8000
        protocol: TCP
      - port: 9102
        protocol: TCP      
  egress:
---
# Source: developer-portal/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: developer-portal-release-name
  labels:
    app: developer-portal
    chart: developer-portal-0.0.9
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: developer-portal
    routed_via: release-name
  ports:
    - name: http
      targetPort: 8000
      port: 8000
---
# Source: developer-portal/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developer-portal-release-name
  labels:
    app: developer-portal
    chart: developer-portal-0.0.9
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: developer-portal
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: developer-portal
        release: release-name
        routed_via: release-name
      annotations:
        checksum/secrets: 5d8048e516093760f845329d66df4d73c2d2b8fc023ef9791eebe532e2d0de3e
        prometheus.io/scrape: "true"        
    spec:
      containers:        
        # The main application container
        - name: developer-portal-release-name
          image: "docker-registry.wikimedia.org/wikimedia/wikimedia-developer-portal:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 1
              memory: 400Mi
                  
      volumes:        
          
        
        []
---
# Source: developer-portal/templates/ingress.yaml
---
---
# Source: developer-portal/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'developer-portal-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'developer-portal-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(DEVELOPER_PORTAL_RELEASE_NAME_SERVICE_HOST)', 'http://developer-portal-release-name:8000']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
